Implement changes suggested by AI mentor